environments/lf-demo/apps/lf-client-agent/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
  labels:
    app.kubernetes.io/name: lf-client-agent
    app.kubernetes.io/version: 0.0.1
  name: lf-client-agent
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: lf-client-agent
    app.kubernetes.io/version: 0.0.1
  type: ClusterIP
