environments/lf-demo/apps/lf-client-agent/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/name: lf-client-agent
    app.kubernetes.io/version: 0.0.1
  name: lf-client-agent
spec:
  host: ""
  path: /
  port:
    targetPort: 8081
  to:
    kind: Service
    name: lf-client-agent
